Fixes CSS alignments

--- a/src/card.css
+++ b/src/card.css
@@ -4,8 +4,8 @@
     -moz-box-shadow: 0 0 5px 2px grey;
     box-shadow: 0 0 5px 2px grey;
     border-radius: 0.4%;
-    padding: 10px 20px;
-    margin: 20px;
+    padding: 5px 10px;
+    margin: 40px;
     border-top: 4px solid #a87ca0;
 }
 
@@ -21,6 +21,7 @@
     font-size: 1.2rem;
     font-weight: 300;
     text-transform: uppercase;
+    padding-left: 10px;
 }
 
 .post-image {
@@ -37,4 +38,5 @@
 .article-category {
     font-size: 1.1rem;
     font-weight: 300;
+    padding-left: 10px;
 }
